# CE3102_metodos

./: CHANGELOG.md  flake.nix  metodos.cabal
Funciones_ANPI/: Base.hs
Funciones_ANPI/Ecuaciones_No_Lineales/: Base.hs  Biseccion.hs  FalsaPosicion.hs  NewtonRaphson.hs  Secante.hs  Steffensen.hs
Funciones_ANPI/Sistemas_De_Ecuaciones/: Base.hs  FFI.hs  GaussSeidel.hs  GradienteConjugado.hs  Jacobi.hs  Pseudoinversa.hs  Thomas.hs
Funciones_ANPI/c++/: CMakeLists.txt  metodospp.pc.in
Funciones_ANPI/c++/include/anpi/: ffi.h  gradiente_conjugado.hpp  sistema.hpp  thomas.h  thomas.hpp
Funciones_ANPI/c++/src/: ffi.cpp  gradiente_conjugado.cpp  steffensen.cpp  thomas.cpp
Problema/: bibliografia.bib
Pruebas/: MOSFET.hs  Metodos.hs
c++/: .gitignore  CMakeLists.txt
c++/src/: gradiente_conjugado.cpp  main.cpp  thomas.cpp
lib/ANPI/: Base.hs  Matriz.hs  main.cpp
lib/ANPI/Ecuaciones_No_Lineales/: Base.hs  Biseccion.hs  FalsaPosicion.hs  NewtonRaphson.hs  Secante.hs  Steffensen.cpp  Steffensen.h  Steffensen.hs
lib/ANPI/Sistemas_De_Ecuaciones/: Base.hs  GaussSeidel.hs  GradienteConjugado.hs  Jacobi.hs  Pseudoinversa.hs  Thomas.hs
lib/c++/: CMakeLists.txt
lib/c++/include/: gradiente_conjugado.h  steffensen.h  thomas.h
problema/: bibliografia.bib  problema_catalogo.md
