cabal-version:      2.4
name:               metodos
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alejandro Soto, Fabián Montero, J. Alejandro Chavarría
maintainer:         devnull@cluster451.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        ANPI.Base,
        ANPI.Ecuaciones_No_Lineales.Base,
        ANPI.Ecuaciones_No_Lineales.Biseccion,
        ANPI.Ecuaciones_No_Lineales.NewtonRaphson,
        ANPI.Ecuaciones_No_Lineales.Secante,
        ANPI.Ecuaciones_No_Lineales.FalsaPosicion,
        ANPI.Ecuaciones_No_Lineales.Steffensen,
        ANPI.Sistemas_De_Ecuaciones.Base,
        ANPI.Sistemas_De_Ecuaciones.Jacobi,
        ANPI.Sistemas_De_Ecuaciones.GaussSeidel,
        ANPI.Sistemas_De_Ecuaciones.Thomas,
        ANPI.Sistemas_De_Ecuaciones.Pseudoinversa,
        ANPI.Sistemas_De_Ecuaciones.GradienteConjugado
   hs-source-dirs:   lib
   default-language: Haskell2010
   cxx-sources: lib/ANPI/Ecuaciones_No_Lineales/Steffensen.cpp
   build-depends:
       base     ^>=4.14.3.0,
       hmatrix  ^>=0.20.2

executable run_methods
    main-is:          RunMethods.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        hmatrix ^>=0.20.2,
        metodos

    hs-source-dirs:   bin
    default-language: Haskell2010

executable run_example
    main-is:          RunExample.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        hmatrix ^>=0.20.2,
        metodos

    hs-source-dirs:   bin
    default-language: Haskell2010
