cabal-version:      2.4
name:               metodos
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Alejandro Soto, Fabián Montero, J. Alejandro Chavarría
maintainer:         devnull@cluster451.org

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Funciones_ANPI.Base,
        Funciones_ANPI.Ecuaciones_No_Lineales.Base,
        Funciones_ANPI.Ecuaciones_No_Lineales.Biseccion,
        Funciones_ANPI.Ecuaciones_No_Lineales.NewtonRaphson,
        Funciones_ANPI.Ecuaciones_No_Lineales.Secante,
        Funciones_ANPI.Ecuaciones_No_Lineales.FalsaPosicion,
        Funciones_ANPI.Ecuaciones_No_Lineales.Steffensen,
        Funciones_ANPI.Sistemas_De_Ecuaciones.Base,
        Funciones_ANPI.Sistemas_De_Ecuaciones.FFI,
        Funciones_ANPI.Sistemas_De_Ecuaciones.Jacobi,
        Funciones_ANPI.Sistemas_De_Ecuaciones.GaussSeidel,
        Funciones_ANPI.Sistemas_De_Ecuaciones.Thomas,
        Funciones_ANPI.Sistemas_De_Ecuaciones.Pseudoinversa,
        Funciones_ANPI.Sistemas_De_Ecuaciones.GradienteConjugado

   pkgconfig-depends: metodospp
   default-language:  Haskell2010

   build-depends:
       base    ^>=4.14.3.0,
       deepseq ^>=1.4.4.0,
       hmatrix ^>=0.20.2

executable metodos
    main-is: Metodos.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base          ^>=4.14.3.0,
        criterion     ^>=1.5.11.0,
        deepseq       ^>=1.4.4.0,
        hmatrix       ^>=0.20.2,
        pretty-simple ^>=4.0.0.0,
        metodos

    hs-source-dirs:   Pruebas
    default-language: Haskell2010

executable mosfet
    main-is: MOSFET.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        hmatrix ^>=0.20.2,
        metodos

    hs-source-dirs:   Pruebas
    default-language: Haskell2010
