cmake_minimum_required(VERSION 3.10.0)
project(c++ VERSION 0.1.0)

if(WIN32)
	set(CMAKE_SYSTEM_LIBRARY_PATH "${CMAKE_SYSTEM_LIBRARY_PATH};../../../armadillo-11.0.1/examples/lib_win64")
	find_library(openblas_LIBRARY NAMES openblas)
	add_subdirectory(../../../armadillo-11.0.1 [EXCLUDE_FROM_ALL])
	set(ARMADILLO_LIBRARIES armadillo)
else()
	find_package(Armadillo REQUIRED)
	include_directories(${ARMADILLO_INCLUDE_DIRS})
endif()

add_executable(c++ src/thomas.cpp src/gradiente_conjugado.cpp src/main.cpp)
target_include_directories(c++ PRIVATE include)
target_link_libraries(c++ ${ARMADILLO_LIBRARIES})
install(TARGETS c++ DESTINATION bin)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
